# Tesla

./: .gitlint  Project - Lane Detection - Requirements.docx  Project - Lane Detection.docx  README.md
.github/workflows/: gitlint.yml
doc/: ContextDiagram.txt  SAD.txt  SRD.txt  UMLdiagram.txt
workspace_catkin/src/carla_lane_detection/: CMakeLists.txt  package.xml
workspace_catkin/src/carla_lane_detection/launch/: tesla.launch
workspace_catkin/src/carla_lane_detection/scripts/: carla_listener.py  hough_transformation.py  ros_listener.py
