<?xml version="1.0"?>
<package format="2">
  <name>carla_lane_detection</name>
  <version>0.0.0</version>
  <description>Carla Lane detection</description>

  <maintainer email="dejan.milojica@rt-rk.com">Dejan Milojica</maintainer>
  <license>BSD</license>

  <author email="Dejan.Milojica@rt-rk.com">Dejan Milojica</author>
 
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
